package com.fms.entity;

public enum Status {
    TODO,
    IN_PROGRESS,
    DONE
}